SERVER-23972 Disallow decimal insertion in legacy write mode when featureCompatibilityVersion is 3.2